[package]
name = "dihardts_cstools"
version = "1.0.0"
edition = "2021"
readme = "Readme.md"
description = "Collection of data structures and algorithms"
repository = "https://github.com/di-hardt/cstools.git"
homepage = "https://github.com/di-hardt/cstools.git"
documentation = "https://github.com/di-hardt/cstools.git"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
hdf5 = "0.8.1"
murmur3 = "0.5.2"
