[package]
name = "dihardts_cstools"
version = "2.1.0"
edition = "2021"
readme = "Readme.md"
description = "Collection of data structures and algorithms"
repository = "https://github.com/di-hardt/cstools.git"
homepage = "https://github.com/di-hardt/cstools.git"
documentation = "https://github.com/di-hardt/cstools.git"
license-file = "LICENSE"

exclude = [
    "/.github",
    "/.vscode",
    "/test_data"
]

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
hdf5 = { version = "0.8.1", optional = true }
murmur3 = "0.5.2"
serde = { version = "1.0.219", features = ["derive"], optional = true }


[dev-dependencies]
rmp-serde = { version = "1.3.0"}

[features]
default = []
hdf5 = ["dep:hdf5"]
serde = ["dep:serde", "bitvec/serde"]
